# seqx

./: Cargo.toml  DEVELOPMENT.md  QUICKREF.md  README.md  SKILL.md  pyproject.toml  rustfmt.toml
.github/workflows/: release-pypi.yml  release.yml
python/seqx/: __main__.py
scripts/: bench_packed_io.sh  gen_random_fasta.py
src/: lib.rs  main.rs
src/cmd/: compress.rs  convert.rs  dedup.rs  extract.rs  filter.rs  guide.rs  merge.rs  mod.rs  modify.rs  sample.rs  search.rs  sort.rs  split.rs  stats.rs
src/common/: README.md  mod.rs  packed_seq_io.rs  parser.rs  record.rs  writer.rs
