[package]
name = "seqx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rand = "0.10.0"
regex = "1.12.3"
clap = { version = "4.5.60", features = ["derive"] }
flate2 = "1.0"
rayon = "1.10"
tempfile = "3.13"
noodles = { version = "0.107.0", features = ["bed", "fasta", "fastq"] }
packed-seq = { version = "4.4.2", features = ["scalar"] }
memmap2 = "0.9.10"
