[package]
name = "seqx"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/openbioseq/seqx"
readme = "README.md"
license = "MIT"
description = "A command-line tool for processing and analyzing biological sequences."

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0.149"
rand = "0.10.0"
regex = "1.12.3"
clap = { version = "4.5.60", features = ["derive"] }
flate2 = "1.1.9"
gzp = "2.0.2"
rayon = "1.11.0"
tempfile = "3.26.0"
noodles = { version = "0.107.0", features = ["bed", "fasta", "fastq"] }
packed-seq = { version = "4.4.2", features = ["scalar"] }
memmap2 = "0.9.10"
num_cpus = "1.17.0"
